tests/ui/explicit-tail-calls/become-outside.constant.stderr
error[E0572]: become statement outside of function body
  --> $DIR/become-outside.rs:7:5
   |
LL |     become f();
   |     ^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0572`.
